# decentralized_environment_perception_and_navigation

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
configs/: default.yaml
docs/: decisions.md
examples/: debug_policy_example.py  generate_maze.py  pybullet_maze.py  random_policy.py  random_policy_example.py  random_walk.py
swarmrl/agent/: agent.py
swarmrl/agents/: embodied_agent.py
swarmrl/communication/: channel.py
swarmrl/core/: config.py  experiment.py  random.py
swarmrl/embodiment/: thymio.py
swarmrl/environment/: coverage.py  maze.py  pybullet_world.py  swarm_env.py  visualization.py
swarmrl/policy/: debug_policy.py  random_policy.py
swarmrl/sensing/: raycast.py
tests/: test_config.py  test_maze.py  test_random.py  test_world.py
